--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.4",
         "laravel/tinker": "^1.0",
+        "livewire/livewire": "1.3",
         "nesbot/carbon": "^2.32",
         "spatie/laravel-permission": "^3.3",
         "yajra/laravel-datatables-oracle": "~9.0"
