--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cross-env": "^5.1.0",
         "jquery": "^3.5.1",
         "laravel-mix": "^4.0.7",
+        "leaflet": "^1.7.1",
         "lodash": "^4.17.20",
         "popper.js": "^1.16.1",
         "resolve-url-loader": "^2.3.1",
@@ -22,6 +23,7 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.12",
+        "vue2-leaflet": "^2.6.0",
         "vuex": "^3.5.1"
     },
     "dependencies": {
